--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="@dimen/main_screen_manin_layout_padding"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -29,7 +30,7 @@
             android:text="@string/start"
             android:layout_gravity="center"
             android:textColor="@color/colorPrimary"
-            android:textSize="22sp"
+            android:textSize="@dimen/default_text_button"
             android:textStyle="bold" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
