--- a/app/src/main/res/drawable/item_color_accent_border_ripple_background.xml
+++ b/app/src/main/res/drawable/item_color_accent_border_ripple_background.xml
@@ -3,7 +3,7 @@
     android:color="#C4C4C4">
     <item android:id="@android:id/mask">
         <shape android:shape="oval">
-            <solid android:color="#000000" />
+            <solid android:color="#F40909" />
         </shape>
     </item>
 
