--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -147,11 +147,14 @@
                 tools:text="30" />
         </LinearLayout>
     </FrameLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvExerciseStatus"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/flExerciseView"
+        android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="5dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flExerciseView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
