--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,17 @@
             android:textSize="@dimen/default_text_button"
             android:textStyle="bold" />
     </FrameLayout>
+
     <FrameLayout
         android:id="@+id/flBMI"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
+        android:layout_marginEnd="131dp"
         android:background="@drawable/item_circular_color_accent_background"
-        android:gravity="center"
+        android:gravity="start"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/flHistory"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/flStart">
 
@@ -55,31 +57,18 @@
             android:textStyle="bold" />
     </FrameLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="Calculator"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/flBMI"
+        app:layout_constraintStart_toStartOf="@+id/flBMI"
+        app:layout_constraintTop_toBottomOf="@id/flBMI" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Calculator"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/flBMI" />
-    -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Calculator"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/flBMI"
-        app:layout_constraintStart_toStartOf="@id/flBMI"
-        app:layout_constraintTop_toBottomOf="@id/flBMI" />
-    <!-- Todo 3 Position history framelayout to end of bmi frame layout and end of parent-->
     <FrameLayout
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,23 +83,23 @@
 
         <ImageView
             android:layout_width="50dp"
+            android:layout_height="59dp"
             android:layout_gravity="center"
-            android:layout_height="50dp"
             android:contentDescription="@string/image"
             android:src="@drawable/ic_calendar" />
     </FrameLayout>
 
-    <!-- Todo 4 position the history text below the history frame layout and center
-    -->
+
     <TextView
-        app:layout_constraintTop_toBottomOf="@id/flHistory"
-        app:layout_constraintStart_toStartOf="@id/flHistory"
-        app:layout_constraintEnd_toEndOf="@id/flHistory"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="History"
         android:textColor="@color/colorAccent"
         android:textSize="22sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/flHistory"
+        app:layout_constraintStart_toStartOf="@id/flHistory"
+        app:layout_constraintTop_toBottomOf="@id/flHistory" />
 </androidx.constraintlayout.widget.ConstraintLayout>
