--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HistoryActivity">
+    tools:context=".history.HistoryActivity">
     <!-- Todo 10 we position the toolbar top to top of parent-->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_history_activity"
